src/components/Input/Input.st.css
.root {
	-st-states: withIcon;
	display: inline-flex;
	position: relative;
	align-items: center;
}

.icon {
	-st-states:
		leftAlign,
		rightAlign;
}

.input {
	display: block;
	width: 100%;
	height: 100%;
}

.border {
	pointer-events: none;
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

